# shared-config-backend

./: .pre-commit-config.yaml  README.md  pyproject.toml  utils-pipeline.yml
.github/workflows/: cicd.yaml
src/lcacollect_config/: config.py  connection.py  email.py  exceptions.py  fastapi.py  load_db.py  router.py  security.py  user.py  validate.py
src/lcacollect_config/graphql/: input_filters.py
tests/: conftest.py  test_config.py  test_connection.py  test_email.py  test_router.py  test_security.py  test_users.py  test_utils.py  test_validate.py
tests/graphql/: conftest.py  test_input_filters.py
